Apos termino da aula 2, veja README.md para mais detalhes.

--- a/src/main/resources/templates/pedido/formulario.html
+++ b/src/main/resources/templates/pedido/formulario.html
@@ -7,7 +7,7 @@
 		<div>
 <div th:replace="~{base::titulo('Novo pedido')}"></div>
 			<div class="card mt-3">
-				<form th:object="${novoPedidoDto}" action="/pedido/novo"
+				<form th:object="${novoPedidoDto}" th:action="@{/pedido/novo}"
 					class="card-body" method="POST">
 
 					<div class="form-group">
