--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -26,16 +26,26 @@
 </style>
 </head>
 
-<div th:fragment="logo"
-	class="logo-container mb-3 p-3 d-flex justify-content-between">
-	<span class="logo">mudi</span> <span class="mt-3">
-	<a class="text-light" sec:authorize="!isAuthenticated()" href="/login">login</a>
-	<a onclick="document.querySelector('#form-logout').submit()" class="text-light" sec:authorize="isAuthenticated()" href="#">logout</a>
-	<form id="form-logout" th:action="@{/logout}" method="post"></form>
-	</span>
+<div th:fragment="logo" class="">
+	<div class="row logo-container mb-1 p-3 justify-content-between">
+		<span class="mt-1 ml-2 logo">mudi</span> <span class="p-2 mt-2 mr-2">
+			<a class="text-light" sec:authorize="!isAuthenticated()"
+			href="/login">login</a> <a
+			onclick="document.querySelector('#form-logout').submit()"
+			class="text-light" sec:authorize="isAuthenticated()" href="#">logout</a>
+			<form id="form-logout" th:action="@{/logout}" method="post"></form>
+		</span>
+	</div>
+	<div class="row mb-2">
+		<div class="col">
+			<nav class="nav" sec:authorize="isAuthenticated()">
+				<a class="nav-link" th:href="@{/home}">Home</a> <a class="nav-link"
+					th:href="@{/usuario/home}">Meus Pedidos</a>
+			</nav>
+		</div>
+	</div>
 </div>
 
 <div th:fragment="titulo(valor)" class="jumbotron mb-0">
 	<h1 class="display-4" th:text="${valor}"></h1>
 </div>
-
