--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,57 +2,54 @@
 <html>
 <head th:replace="~{base::head}"></head>
 <body>
-<div th:replace="~{base::logo}"></div>
-<div class="container">
-<div th:replace="~{base::titulo('Meus pedidos')}"></div>
+	<div th:replace="~{base::logo}"></div>
+	<div class="container">
+		<div th:replace="~{base::titulo('Últimos pedidos')}"></div>
 
-	<nav
-		class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between mb-3">
-		<div class="navbar-nav">		
-		      <a class="nav-item nav-link" th:classappend="${status} == null ? 'active'"href="/home">Todos</a> 
-		      <a class="nav-item nav-link" th:classappend="${status} == 'AGUARDANDO' ? 'active'" href="/home/aguardando">Aguardando</a> 
-		      <a class="nav-item nav-link" th:classappend="${status} == 'APROVADO' ? 'active'" href="/home/aprovado">Aprovado</a> 
-		      <a class="nav-item nav-link" th:classappend="${status} == 'ENTREGUE' ? 'active'" href="/home/entregue">Entregue</a>
-		</div>
-		<a href="/pedido/formulario"><button
-				class="btn btn-outline-secondary my-2 my-sm-0">Novo</button></a>
-	</nav>
-	<div th:each="pedido : ${pedidos}" class="card mb-3">
-	<th:block th:switch="${pedido.status.name()}"> 
-		<div th:case="'AGUARDANDO'" th:text="${pedido.nomeProduto}" class="card-header alert-warning">Nome Produto</div>
-		<div th:case="'APROVADO'" th:text="${pedido.nomeProduto}" class="card-header alert-success">Nome Produto</div>
-		<div th:case="'ENTREGUE'" th:text="${pedido.nomeProduto}" class="card-header alert-dark">Nome Produto</div>
-		<div th:case="*"  th:text="** Pedido com status inválido ** - ${pedido.nomeProduto}" class="card-header alert-danger">Nome Produto</div>
-		
-	</th:block>
-		<div class="card-body">
-			<div class="row">
-				<div class="col-12 col-sm-6 mb-3">
-					<div class="row">
-						<div class="col-md-5">
-							Valor <span th:if="${pedido.valorNegociado != null}" th:text="'R$ '+${#numbers.formatDecimal(pedido.valorNegociado,1,'POINT',2,'COMMA')}">R$ 240,90</span>
+		<div th:each="pedido : ${pedidos}" class="card mb-3 mt-3">
+			<th:block th:switch="${pedido.status.name()}">
+				<div th:case="'AGUARDANDO'" th:text="${pedido.nomeProduto}"
+					class="card-header alert-warning">Nome Produto</div>
+				<div th:case="'APROVADO'" th:text="${pedido.nomeProduto}"
+					class="card-header alert-success">Nome Produto</div>
+				<div th:case="'ENTREGUE'" th:text="${pedido.nomeProduto}"
+					class="card-header alert-dark">Nome Produto</div>
+				<div th:case="*"
+					th:text="** Pedido com status inválido ** - ${pedido.nomeProduto}"
+					class="card-header alert-danger">Nome Produto</div>
+			</th:block>
+
+			<div class="card-body">
+				<div class="row">
+					<div class="col-12 col-sm-6 mb-3">
+						<div class="row">
+							<div class="col-md-5">
+								Valor <span th:if="${pedido.valorNegociado != null}"
+									th:text="'R$ '+${#numbers.formatDecimal(pedido.valorNegociado,1,'POINT',2,'COMMA')}">R$
+									240,90</span>
+							</div>
+							<div class="col-md-7">
+								Data da Entrega <span
+									th:text="${#temporals.format(pedido.dataEntrega, 'dd/MM/yyyy')}">19/12/2020</span>
+							</div>
 						</div>
-						<div class="col-md-7">
-							Data da Entrega <span th:text="${#temporals.format(pedido.dataEntrega, 'dd/MM/yyyy')}">19/12/2020</span>
+						<div>Produto</div>
+						<div>
+							<input class="form-control" th:value="${pedido.urlProduto}"
+								value="URL do Produto"></input>
+						</div>
+						<div>Descrição</div>
+						<div>
+							<textarea class="form-control" th:text="${pedido.descricao}"> Descrição do Produto </textarea>
 						</div>
 					</div>
-					<div>Produto</div>
-					<div>
-						<input class="form-control" th:value="${pedido.urlProduto}"
-							value="URL do Produto"></input>
-					</div>
-					<div>Descrição</div>
-					<div>
-						<textarea class="form-control" th:text="${pedido.descricao}"> Descrição do Produto </textarea>
-					</div>
-				</div>
-				<div class="col-12 col-sm-6 ">
-					<div>
-						<img class="img-thumbnail" th:src="${pedido.urlImagemProduto}" src:"" />
+					<div class="col-12 col-sm-6 ">
+						<div>
+							<img class="img-thumbnail" th:src="${pedido.urlImagemProduto}" src:"" />
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	</body>
+</body>
 </html>
