--- a/src/main/resources/templates/oferta/home.html
+++ b/src/main/resources/templates/oferta/home.html
@@ -1,55 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head th:replace="~{base::head}"></head>
-<body>
+<body onload="onload()">
 	<div th:replace="~{base::logo}"></div>
-	<div class="container">
+	<div class="container" id="ofertas">
 		<div th:replace="~{base::titulo('Últimos pedidos')}"></div>
 
-		<div th:each="pedido : ${pedidos}" class="card mb-3 mt-3">
-			<th:block th:switch="${pedido.status.name()}">
-				<div th:case="'AGUARDANDO'" th:text="${pedido.nomeProduto}"
-					class="card-header alert-warning">Nome Produto</div>
-				<div th:case="'APROVADO'" th:text="${pedido.nomeProduto}"
-					class="card-header alert-success">Nome Produto</div>
-				<div th:case="'ENTREGUE'" th:text="${pedido.nomeProduto}"
-					class="card-header alert-dark">Nome Produto</div>
-				<div th:case="*"
-					th:text="** Pedido com status inválido ** - ${pedido.nomeProduto}"
-					class="card-header alert-danger">Nome Produto</div>
-			</th:block>
+		<div v-for="pedido in pedidos" class="card mb-3 mt-3">
+			<div class="card-header alert-dark">{{pedido.nomeProduto}}</div>
 
 			<div class="card-body">
 				<div class="row">
 					<div class="col-12 col-sm-6 mb-3">
 						<div class="row">
 							<div class="col-md-5">
-								Valor <span th:if="${pedido.valorNegociado != null}"
-									th:text="'R$ '+${#numbers.formatDecimal(pedido.valorNegociado,1,'POINT',2,'COMMA')}">R$
-									240,90</span>
+								Valor <input />
 							</div>
 							<div class="col-md-7">
-								Data da Entrega <span
-									th:text="${#temporals.format(pedido.dataEntrega, 'dd/MM/yyyy')}">19/12/2020</span>
+								Data da Entrega <input />
 							</div>
 						</div>
 						<div>Produto</div>
 						<div>
-							<input class="form-control" th:value="${pedido.urlProduto}"
-								value="URL do Produto"></input>
+							<a v-bind:href="pedido.urlProduto">{{pedido.nomeProduto}}</a>
 						</div>
 						<div>Descrição</div>
 						<div>
-							<textarea class="form-control" th:text="${pedido.descricao}"> Descrição do Produto </textarea>
+							<textarea class="form-control" v-bind:text="pedido.descricao"> {{pedido.descricao}} </textarea>
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 ">
 						<div>
-							<img class="img-thumbnail" th:src="${pedido.urlImagemProduto}" src:"" />
+							<img class="img-thumbnail" v-bind:src="pedido.urlImagemProduto" />
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+		<script>
+			function onload() {
+				var app = new Vue({
+					el : "#ofertas",
+					data : {
+						pedidos : []
+					}, mounted(){
+						axios.get('http://localhost:8080/api/pedidos/aguardando')
+						.then(response => this.pedidos = response.data)
+					}
+				
+				});
+				
+
+			}
+		</script>
+		<!-- production version, optimized for size and speed -->
+		<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 </html>
