--- a/src/main/resources/templates/oferta/home.html
+++ b/src/main/resources/templates/oferta/home.html
@@ -7,26 +7,31 @@
 		<div th:replace="~{base::titulo('Últimos pedidos')}"></div>
 
 		<div v-for="pedido in pedidos" class="card mb-3 mt-3">
-			<div class="card-header alert-dark">{{pedido.nomeProduto}}</div>
+			<div class="card-header alert-dark">
+				<a v-bind:href="pedido.urlProduto">{{pedido.nomeProduto}}</a>
+			</div>
 
 			<div class="card-body">
 				<div class="row">
 					<div class="col-12 col-sm-6 mb-3">
+						<!-- 						<div>Descrição</div> -->
+						<div>
+							<!-- 							<textarea class="form-control" v-bind:text="pedido.descricao"> {{pedido.descricao}} </textarea> -->
+							<p>{{pedido.descricao}}</p>
+						</div>
 						<div class="row">
 							<div class="col-md-5">
-								Valor <input />
+								<label>Valor</label> <input v-model="pedido.valorNegociado"
+									class="form-control" />
 							</div>
 							<div class="col-md-7">
-								Data da Entrega <input />
+								<label>Data da Entrega</label> <input
+									v-model="pedido.dataEntrega" class="form-control" />
 							</div>
 						</div>
-						<div>Produto</div>
-						<div>
-							<a v-bind:href="pedido.urlProduto">{{pedido.nomeProduto}}</a>
-						</div>
-						<div>Descrição</div>
-						<div>
-							<textarea class="form-control" v-bind:text="pedido.descricao"> {{pedido.descricao}} </textarea>
+						<div class="mt-2">
+							<label>Comentário</label>
+							<textarea class="form-control" v-model="pedido.comentario"> {{pedido.comentario}} </textarea>
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 ">
@@ -35,9 +40,11 @@
 						</div>
 					</div>
 				</div>
+				<button v-if="pedido.ofertaCadastrada" class="btn btn-success">Oferta Enviada</button>
+				<button v-else v-on:click="enviarOferta(pedido)" class="btn btn-primary">Enviar
+					oferta</button>
 			</div>
-		</div>
-		<script>
+			<script>
 			function onload() {
 				var app = new Vue({
 					el : "#ofertas",
@@ -45,7 +52,26 @@
 						pedidos : []
 					}, mounted(){
 						axios.get('http://localhost:8080/api/pedidos/aguardando')
-						.then(response => this.pedidos = response.data)
+						.then(response => {
+							response.data.forEach(pedido => pedido.ofertaCadastrada=false)
+							this.pedidos = response.data;
+						})
+					}, 
+					methods:{
+						enviarOferta: function(pedido){
+							
+							axios.post('http://localhost:8080/api/ofertas',{
+								pedidoId : pedido.id,
+								valor : pedido.valorNegociado,
+								dataEntrega : pedido.dataEntrega,
+								comentario : pedido.comentario
+							})
+							.then(response =>{
+								 pedido.ofertaCadastrada = true;
+								 console.log(pedido);
+								}
+							);
+						}
 					}
 				
 				});
@@ -53,8 +79,8 @@
 
 			}
 		</script>
-		<!-- production version, optimized for size and speed -->
-		<script src="https://cdn.jsdelivr.net/npm/vue"></script>
-		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+			<!-- production version, optimized for size and speed -->
+			<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+			<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 </html>
